[tool.poetry]
name = "neuralyze"
version = "0.1.0"
description = ""
authors = ["Diego Canez <canezdiego@gmail.com>"]
packages = [
    { include = "neuralyze", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.2"
torch = "^2.2.2"
pyhessian = {git = "https://github.com/dgcnz/PyHessian"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
